--- a/views/team.jade
+++ b/views/team.jade
@@ -97,7 +97,7 @@ block content
 
 	section(id="top")
 		div
-			h1= team.fullName
+			span#pageTitle= team.fullName
 			p= message
 
 	section(id="left" style="width:65%")
