--- a/views/freeAgentAuction.jade
+++ b/views/freeAgentAuction.jade
@@ -14,9 +14,9 @@ block content
 		div
 			p= message
 			h1 Free Agent Auctions
+		div.widget
 			-if(user != null)
 				h3= "Your available cash: " +  faa_cash.value
-		div(style="display:inline")
 			h3 Other teams' cash:
 			-var count = 0;
 			table
@@ -30,39 +30,41 @@ block content
 						-count++;
 	
 	section(id="left" style="width:50%")
-		h3 Open Auctions
-		-if(isOffseason && (!user || user.role != 'admin'))
-			h3 Come back after the start of the season to bid on or request new free agent auctions.
-		-else
-			-if(auctions && auctions.length > 0)
-				ul
-					-each auction in auctions
-						li
-							p= auction.player_name
-							-var deadline = moment(auction.deadline).calendar();
-							p= "Deadline: " + deadline
-							-for(var j = 0; j < auction.bids.length; j++) {
-							-	if(auction.bids[j].teamId == user.team) {
-									p= "Your bid: " + auction.bids[j].amount
-							-	}
-							-}
-							form(id="bid_" + auction._id method="POST" action="/gm/faa/bid")
-								label(for="bid_text_" + auction._id) Amount
-								input(type="hidden" name="_id" value=auction._id)
-								input(id="bid_text_" + auction._id type="number" 
-									placeholder="0" name="bid" min="0" max=faa_cash.value required="required")
-								input(type="submit" value="Make a bid")
+		div.widget
+			h3 Open Auctions
+			-if(isOffseason && (!user || user.role != 'admin'))
+				h3 Come back after the start of the season to bid on or request new free agent auctions.
 			-else
-				p There are currently no auctions
+				-if(auctions && auctions.length > 0)
+					ul
+						-each auction in auctions
+							li
+								p= auction.player_name
+								-var deadline = moment(auction.deadline).calendar();
+								p= "Deadline: " + deadline
+								-for(var j = 0; j < auction.bids.length; j++) {
+								-	if(auction.bids[j].teamId == user.team) {
+										p= "Your bid: " + auction.bids[j].amount
+								-	}
+								-}
+								form(id="bid_" + auction._id method="POST" action="/gm/faa/bid")
+									label(for="bid_text_" + auction._id) Amount
+									input(type="hidden" name="_id" value=auction._id)
+									input(id="bid_text_" + auction._id type="number" 
+										placeholder="0" name="bid" min="0" max=faa_cash.value required="required")
+									input(type="submit" value="Make a bid")
+				-else
+					p There are currently no auctions
 
-	section(id="right")
-		-if(user)
-			h3 Request a new Free Agent Auction
-			br
-			form(id="create_auction", method="POST", action="/gm/faa/request")
-				label(for='faa_name') Name:
-				input#faa_name(type='text', name='playerName' style='width:200px;margin-left:10px')
-				input(type='hidden' name='requestingTeam' value=user.team)
+	section(id="right" style="width:50%")
+		div.widget
+			-if(user)
+				h3 Request a new Free Agent Auction
 				br
-				br
-				input(type="submit", value="Submit Request")
+				form(id="create_auction", method="POST", action="/gm/faa/request")
+					label(for='faa_name') Name:
+					input#faa_name(type='text', name='playerName' style='width:200px;margin-left:10px')
+					input(type='hidden' name='requestingTeam' value=user.team)
+					br
+					br
+					input(type="submit", value="Submit Request")
