--- a/views/partials/playerList.jade
+++ b/views/partials/playerList.jade
@@ -2,7 +2,7 @@ include teamLink
 
 table(style="border-collapse:collapse")
 	thead
-		th(style="width:200px") Name
+		th(style="min-width:200px;text-align:left") Name
 		th Team
 	tbody(id="playerListBody")
 		-each player in players
